# digistar

./: .gitignore  BUILD_STATUS.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CMakeLists.txt  EDP.md  INTEGRATION_SUMMARY.md  Makefile  Makefile.integrated  OPTIMIZATION_FINDINGS.md  POOL_DESIGN.md  POOL_IMPLEMENTATION_STATUS.md  PROJECT_STRUCTURE.md  README.md  README_BACKENDS.md  README_CLEAN.md  SDL2_VIEWER_README.md  TODO.md  big-atom-fundamentals.md  build.sh  celestial-machanics-dsl.md  cleanup.sh  composite_viewer_scaled.cpp  debug_event_size.cpp  design.md  digistar  energy-fission-prob.py  message-passing-api.md  minimal_viewer_test  minimal_viewer_test.cpp  morse-potential.md  nuclear-big-atom-physics.md  physics_viewer_demo  physics_viewer_demo.cpp  spatial-index.md  temperature-dynamics.md  temperature.md  tensor-springs-chemistry.md  tensor-springs-composite-clustering.md  (+3 more)
2dsim/: app.py  bodies_sim  bodies_viewer  game4.py  game5.py  game7.py  gpu_info  gpu_info.cu  nbody-server.cu  nbody.cu  simulation.h  simulation_api.cpp  simulation_api.h  websocket.py
2dsim/static/: index2.html
2dsim/tmp/: test3.py  test4.py
benchmarks/: CMakeLists.txt  benchmark_backends.cpp  benchmark_million.cpp  test_million_viz.cpp
docs/: BLACK_HOLE_DESIGN.md  BOUNDARY_DETECTION_APPROACHES.md  COMPOSITE_BODIES_DESIGN.md  DISTRIBUTED_COMPUTATION_CHALLENGES.md  DSL_ADVANCED_FEATURES.md  DSL_DESIGN.md  DSL_LANGUAGE_SPEC.md  DSL_SPECIFICATION.md  EMERGENT_COMPOSITE_SYSTEM.md  EPHEMERAL_PARTICLES.md  EVENT_SYSTEM_ARCHITECTURE.md  EVENT_SYSTEM_DESIGN.md  FUTURE_VISION.md  GPU_CPU_OPTIMIZATION.md  GRAPHICS_VIEWER.md  GRAVITY_AND_SPATIAL_TOPOLOGY.md  INTEGRATED_PHYSICS_SPATIAL.md  INTEGRATION_METHODS.md  MERGER_FISSION_DESIGN.md  Makefile  NETWORK_AND_OBSERVATION_DESIGN.md  PARTICLE_BUDGET.md  SCALE_RATIONALE.md  SOFT_CONTACT_FORCES.md  SPATIAL_INDEXING_DESIGN.md  SPRING_SYSTEM_DESIGN.md  TEMPERATURE_DYNAMICS_DESIGN.md  TODO.md  VIRTUAL_SPRING_DESIGN.md  agent-framework.md  amorphous-objects.md  backend-architecture-and-layer-optimization.md  base-units.md  big-atom-clusters.md  black-holes.md  data-management-and-spatial-index.md  decentralized-space.md  design-doc.md  design_document.md  grid-spatial-index.md  (+13 more)
docs/old/: temperature-energy-pressure-dynamics.md
examples/: CMakeLists.txt  SimpleBackend.h  galaxy_formation.cpp  graphics_viewer_demo.cpp  integrated_demo.cpp  million_particles.cpp  simple_graphics_test.cpp  solar_system.cpp  solar_system_simple.cpp  solar_system_test
examples/dsl/: solar_system.dsl  spaceship_ai.dsl  star_lifecycle.dsl  volcano_planet.dsl
examples/solar_system/: pluto.json
experiments/: Makefile  README.md
experiments/celestial/: black_holes.cpp  black_holes_v2.cpp  merger_complete.cpp  particle_merging.cpp  simple_star_formation.cpp  star_formation.cpp
lsss/: README.md  units.md
space-sandbox/: CMakeLists.txt
space-sandbox/include/: command_queue.h  common.h  sim_cuda_core.h  simulation.h
space-sandbox/solar_system/: asteroid_belt.json  main_planets.json  mars.json
space-sandbox/src/: simulation.cu  simulation_controller.cpp
src/: CMakeLists.txt  benchmark_backends.cpp  gravity_baseline.cu  main.cpp
src/algorithms/: BarnesHut.h  BarnesHutFixed.h  BarnesHutRobust.h  FastFFT2D.h  ParticleMesh.h  ParticleMeshCustom.h  ParticleMeshFFTW.h
src/backend/: AVX2Backend.cpp  BackendFactory.cpp  CUDABackend.cu  CUDABackend.h  ISimulationBackend.h  SSE2Backend.cpp  SimpleBackend.cpp  backend_interface.h  cpu_backend_openmp.cpp  cpu_backend_openmp.h  cpu_backend_reference.cpp  cpu_backend_reference.h  cpu_backend_simple.cpp  cpu_backend_simple.h
src/config/: simulation_config.cpp  simulation_config.h
src/core/: simulation.cpp  simulation.h  vec2.h
src/core/monitoring/: TerminalMonitor.h
src/dsl/: bytecode_compiler.h  bytecode_vm.h  command.cpp  command.h  dsl_runtime.h  evaluator.cpp  evaluator.h  evaluator_refactored.h  event_bridge.cpp  event_bridge.h  pattern_matcher.cpp  pattern_matcher.h  procedural_generator.cpp  procedural_generator.h  script_manager.cpp  script_manager.h  sexpr.cpp  sexpr.h  thread_pool.cpp  thread_pool.h
src/dynamics/: ParticleMerger.h  ThermalDynamics.h
src/events/: event_consumer.cpp  event_consumer.h  event_producer.cpp  event_producer.h  event_system.cpp  event_system.h  event_system_test.cpp
src/integrations/: README.md
src/integrations/agents/: IAgent.h
src/integrations/mcp/: MCPServer.h
src/physics/: collision_backend.cpp  collision_backend.h  composite_system.h  cpu_collision_backend.h  cpu_material_spring_backend.h  cpu_virtual_spring_backend.h  gravity_backend.h  material_system.cpp  material_system.h  modular_physics_backend.h  pm_gravity_backend.h  pm_solver.cpp  pm_solver.h  pools.cpp  pools.h  pools_old.h  pools_v2.h  sparse_spatial_grid.h  spatial_index.h  types.h  virtual_spring_network_backend.h
src/simulation/: integrated_simulation.cpp  integrated_simulation.h  physics_pipeline.cpp  physics_pipeline.h  simulation.cpp  simulation.h  simulation_builder.cpp  simulation_builder.h
src/spatial/: QuadTree.h
src/viewer/: graphics_viewer.cpp  graphics_viewer.h  viewer_event_bridge.cpp  viewer_event_bridge.h
src/visualization/: ascii_renderer.cpp  ascii_renderer.h
tests/: CMakeLists.txt  run_dsl_tests.sh  test_command_queue.cpp  test_dsl  test_dsl.cpp  test_dsl_comprehensive.cpp  test_dsl_improvements.cpp  test_event_system.cpp  test_event_system_simple.cpp  test_integrated_simulation.cpp  test_physics_pipeline.cpp  test_thread_pool.cpp
tests/integration/: test_backends.cpp  test_backends_fast.cpp  test_barnes_hut_backend.cpp  test_barnes_hut_fixed.cpp  test_bh_robust.cpp  test_convergence.cpp  test_simple_bh.cpp
tests/unit/: test_algorithms.cpp  test_fft.cpp  test_force_accuracy.cpp  test_orbit_debug.cpp  test_pools.cpp  test_quadtree.cpp
tests/validation/: test_accuracy.cpp  test_accuracy_multi.cpp  test_circular_orbit.cpp  test_earth_moon.cpp  test_orbit_simple.cpp  test_pm.cpp  test_pm_custom.cpp  test_solar_system.cpp
tools/: backend_comparison.cpp
(+205 files in other folders)
